#341 Fix query join criteria when columns in common are null (#342)
* Fix query join criteria when columns in common are null

* upgrade clickhouse version in tests

* Remove unnecessary change